[package]
name = "tokio-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tokio-tower = "0.6.0"
log = "0.4"
pretty_env_logger = "0.5"
async-trait = "0.1.74"
futures = "0.3.29"
async-stream = "0.3.5"
tokio-stream = "0.1.14"
scc = "2.0.16"
slab = "0.4.9"
