[package]
name = "tokio-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["server", "http1", "client"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tokio-tower = "0.6.0"
log = "0.4"
pretty_env_logger = "0.5"
async-trait = "0.1.74"
futures = "0.3.29"
tokio-stream = "0.1.14"
scc = "2.0.16"
tokio-util = { version = "0.7.10", features = ["rt"] }
derive_builder = "0.20.0"
hyper-util = { version = "0.1.3", features = ["tokio", "client", "client-legacy", "http1"] }
http-body-util = "0.1.1"
bytes = "1.5.0"
